<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="derived_app_name" translatable="false">Neo Launcher</string>
    <string name="app_version" translatable="false">Version</string>
    <string name="app_build" translatable="false">Build</string>
    <string name="app_id" translatable="false">Package</string>
    <string name="default_folder_name">New Folder</string>
    <string name="folder_name">Folder Name</string>
    <string name="title__general_about">About</string>
    <string name="title__general_desktop">Desktop</string>
    <string name="title__general_dock">Dock</string>
    <string name="title__general_drawer">Drawer</string>
    <string name="title__general_theme">Theme</string>
    <string name="title__general_search">Search and Folders</string>
    <string name="title__general_smartspace">Home Widget</string>
    <string name="title__general_advanced">Advanced Settings</string>
    <string name="title__general_notifications">Gestures and Notifications</string>
    <string name="title__general_profile">Profile</string>
    <string name="title__general_gestures_dash">Gestures &amp; Dash</string>
    <string name="title__general_search_feed">Search &amp; Feed</string>
    <string name="title__general_widgets_notifications">Widgets &amp; Notifications</string>
    <string name="summary__general_desktop">Customize your desktop</string>
    <string name="summary__general_dock">Hotseat icons, search bar</string>
    <string name="summary__general_drawer">Customize your drawer</string>
    <string name="summary__general_theme">Change colors, icon pack, icon shape</string>
    <string name="summary__general_search">Search Provider, style, icons</string>
    <string name="summary__general_smartspace">Date, time, home widget</string>
    <string name="summary__general_notifications">Badge count, badge color, gestures</string>
    <string name="summary__general_advanced">Language, back up, setting search</string>
    <string name="summary__general_about">More about Neo Launcher</string>
    <string name="pref_category__interfaces">User Interface</string>
    <string name="pref_category__features">Features</string>
    <string name="pref_category__inputs">Gestures and Search</string>
    <string name="pref_category__others">Others</string>
    <string name="pref_category__incubating">Incubating</string>
    <string name="allow_rotation_blocked_desc">Current Display setting doesn\'t permit rotation</string>
    <string name="title_desktop_full_width_widgets">Full width widgets</string>
    <string name="title_desktop_widget_corner_radius">Widget corner radius</string>
    <string name="title__desktop_icon_size">Icon size</string>
    <string name="title__desktop_grid_size">Grid size</string>
    <string name="title__desktop_hide_icon_labels">Hide icon labels on home screen</string>
    <string name="title_desktop_overlap_placement">Allow overlapping widgets</string>
    <string name="title_desktop_lock_desktop">Lock Desktop</string>
    <string name="title_desktop_keep_empty">Allow Empty Pages</string>
    <string name="title__multiline_labels">Multiline app names</string>
    <string name="title_desktop_icon_popup_menu">Popup menu items</string>
    <string name="title_desktop_hide_statusbar">Hide status bar</string>
    <string name="title_desktop_text_size">Text Size</string>
    <string name="summary_full_width_widgets">Allow widgets to span over the whole width without padding</string>
    <string name="grid_size_height">Height</string>
    <string name="grid_size_width">Width</string>
    <string name="title__dock_icon_size">Icon size</string>
    <string name="title__dock_scale">Dock scale</string>
    <string name="title_dock_fill">Show Background</string>
    <string name="title_dock_background_color">Background Color</string>
    <string name="title_dock_two_row">Show Second Row</string>
    <string name="title__dock_hide">Dock Hide</string>
    <string name="title__dock_hide_labels">Hide Labels</string>
    <string name="title__dock_colored_icons">Colored icons</string>
    <string name="title__dock_hotseat_icons">Icon Count</string>
    <string name="title__dock_show_arrow">Show Arrow</string>
    <string name="dock_colored_google">Color Icons</string>
    <string name="title_opacity">Opacity</string>
    <string name="hotseat_show_page_indicator">Show Page Indicator</string>
    <string name="title_disabled">Off</string>
    <string name="dock_search_value" translatable="false">%1$s %2$s</string>
    <string name="num_hotseat_icons_pref_title">Icon Count</string>
    <string name="title_dock_search">Dock search bar</string>
    <string name="summary_dock_search">Show in the bottom dock</string>
    <string name="label_search">Search</string>
    <string name="cat_dock_search">Drawer and dock</string>
    <string name="label_lens" translatable="false">Google Lens</string>
    <string name="title__drawer_sort">Apps Sort</string>
    <string name="title__drawer_all_apps">Show "All Apps" label</string>
    <string name="title_separate_work_apps">Second Tab for Work Apps</string>
    <string name="title__drawer_paged_apps">Paged Apps view</string>
    <string name="title__drawer_hide_icon_labels">Hide app names</string>
    <string name="title__drawer_hide_apps">Hidden App Shortcuts</string>
    <string name="title__drawer_icon_size">All Apps Icon Size</string>
    <string name="title__drawer_categorization">Categories</string>
    <string name="title__drawer_icon_popup_menu">Shortcut Bubble</string>
    <string name="title__drawer_columns">Number of columns</string>
    <string name="title__drawer_rows">Number of rows</string>
    <string name="title_drawer_enable_background">Use custom background color</string>
    <string name="title_drawer_row_height">Row height</string>
    <string name="title__sort_mode">App Sorting</string>
    <string name="title__sort_alphabetical_az">A→Z</string>
    <string name="title__sort_alphabetical_za">Z→A</string>
    <string name="title__sort_last_installed">Last Installed</string>
    <string name="title__sort_most_used">Most Used</string>
    <string name="title__sort_by_color">By Color</string>
    <string name="title_all_apps_search">Drawer search bar</string>
    <string name="title_all_apps_google_search">Web results</string>
    <string name="title_all_apps_keep_scroll_state">Remember Position</string>
    <string name="title_search_hidden_apps">Find hidden apps</string>
    <string name="title_fuzzy_search">Fuzzy Search</string>
    <string name="summary_fuzzy_search">Approximate matching for app searches.</string>
    <string name="title_app_categorize">Categorize Apps</string>
    <string name="summary_app_categorize">Choose between Tabs or Folders</string>
    <string name="summary_search_hidden_apps">Show hidden shortcuts in results.</string>
    <string name="summary_all_apps_google_search">Find web results and apps</string>
    <string name="summary__drawer_hide_apps">Hide app from the app drawer</string>
    <string name="summary_app_categorization_enable">Create tabs or folders</string>
    <string name="summary_app_suggestions">For all apps and Home screen</string>
    <string name="title_disable_suggestions_prompt">Turn off app suggestions</string>
    <string name="msg_disable_suggestions_prompt">"Usage data will be deleted."</string>
    <string name="label_turn_off_suggestions">Disable</string>
    <string name="title_text_color">Text Color</string>
    <string name="title_drawer_layout">Layout Mode</string>
    <string name="title_drawer_vertical">Vertical</string>
    <string name="title_drawer_vertical_list">Vertical List</string>
    <string name="title_drawer_paged">Paged</string>
    <string name="dialog_message_change_sort">Change to alphabetical app sorting?</string>
    <string name="cat_desktop_grid">Grid and Layout</string>
    <string name="cat_drawer_grid">Grid</string>
    <string name="cat_drawer_icons">Icons</string>
    <string name="pref_appcategorization_flowerpot_title">App Category</string>
    <string name="title_app_categorization_enable">Enable apps categories</string>
    <string name="pref_appcategorization_style_text">Style</string>
    <string name="app_categorization_folders">Folders</string>
    <string name="pref_appcategorization_folders_summary">Tap to open popup.</string>
    <string name="app_categorization_tabs">Tabs</string>
    <string name="pref_appcategorization_tabs_summary">Swipe between groups.</string>
    <string name="pref_app_groups_edit_tip">Tap to edit, drag to reorder.</string>
    <string name="tab_type_custom_desc">Pick shortcuts manually.</string>
    <string name="tab_type_smart">Automatic</string>
    <string name="pref_appcategorization_flowerpot_summary">Pick shortcuts automatically.</string>
    <string name="add_new_tab">Add</string>
    <string name="selected_count">%1$d selected</string>
    <plurals name="tab_apps_count">
        <item quantity="one">%1$d App</item>
        <item quantity="other">%1$d Apps</item>
    </plurals>
    <plurals name="hidden_apps_count">
        <item quantity="one"></item>
        <item quantity="other">%1$d Hidden</item>
    </plurals>
    <string name="protected_apps">Protected Apps</string>
    <string name="protected_app_selected">Protected Apps (%1$d)</string>
    <string name="hide_app_selected">Hidden Apps (%1$d)</string>
    <string name="hide_app_reset">Reset hidden apps</string>
    <string name="selected_apps">Selected Apps (%1$d)</string>
    <string name="app_reset">Reset Selection</string>
    <string name="protected_app_reset">Reset protected apps</string>
    <string name="action_preferences" translatable="false">@string/customize</string>
    <string name="needs_usage_access">Usage access needed</string>
    <string name="msg_missing_usage_access">Turn on usage access for <xliff:g example="My App" id="name">%1$s</xliff:g> to show app suggestions</string>
    <string name="trust_apps_no_lock_error">Please set up a secure lock screen to restrict app access</string>
    <string name="trust_apps_manager_name">Hidden and protected apps</string>
    <string name="enable_protected_apps">Turn on protected apps</string>
    <string name="disable_protected_apps">Turn off protected apps</string>
    <string name="disable_protected_apps_message">Turn off protected apps requiring authentication</string>
    <string name="title__theme_accent_color">Accent Color</string>
    <string name="title__theme_blur">Blur</string>
    <string name="title__theme_blur_radius">Blur Intensity</string>
    <string name="title__theme_icon_shape">Icon shape</string>
    <string name="title_theme_icon_packs">Icon Packs</string>
    <string name="title_theme_customize_icons">Customize Icons</string>
    <string name="theme_use_black">Use pure black</string>
    <string name="theme_use_dark_text">Use dark text</string>
    <string name="summary__advanced_setting_search">Display setting search in the action bar</string>
    <string name="summary__advanced_language">Change language of this app</string>
    <string name="title__advanced_setting_search">Show settings search</string>
    <string name="title__advanced_language">Language</string>
    <string name="backups">Backups</string>
    <string name="backup_pref_summary">Save home screen, restore backups</string>
    <string name="developer_options_title">Developer Options</string>
    <string name="title__dev_show_Dev">Show in Settings</string>
    <string name="title__dev_show_debug_info">Show debug info</string>
    <string name="title__restart_launcher">Restart</string>
    <string name="summary__dev_restart">Can be helpful if some settings are not properly applied</string>
    <string name="pref_desktop_mode">Desktop mode</string>
    <string name="pref_desktop_mode_summary">Activate Android\'s desktop mode</string>
    <string name="pref_desktop_mode_settings">Desktop mode settings</string>
</resources>