<?xml version="1.0" encoding="utf-8"?><!--
  ~  This file is part of Omega Launcher
  ~  Copyright (c) 2021   Omega Launcher Team
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as
  ~  published by the Free Software Foundation, either version 3 of the
  ~  License, or (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="Settings">

    <PreferenceCategory
        android:title="@string/pref_category__interfaces"
        app:allowDividerAbove="false">
        <Preference
            android:fragment="com.saggitt.omega.preferences.views.PrefsDesktopFragment"
            android:icon="@drawable/ic_desktop"
            android:layout="@layout/home_preference"
            android:summary="@string/summary__general_desktop"
            android:title="@string/title__general_desktop" />

        <Preference
            android:fragment="com.saggitt.omega.preferences.views.PrefsDockFragment"
            android:icon="@drawable/ic_dock"
            android:layout="@layout/home_preference"
            android:summary="@string/summary__general_dock"
            android:title="@string/title__general_dock" />

        <Preference
            android:fragment="com.saggitt.omega.preferences.views.PrefsDrawerFragment"
            android:icon="@drawable/ic_apps_colored"
            android:layout="@layout/home_preference"
            android:summary="@string/summary__general_drawer"
            android:title="@string/title__general_drawer" />

        <Preference
            android:fragment="com.saggitt.omega.preferences.views.PrefsThemeFragment"
            android:icon="@drawable/ic_style"
            android:layout="@layout/home_preference"
            android:summary="@string/summary__general_theme"
            android:title="@string/title__general_theme" />

        <Preference
            android:fragment="com.saggitt.omega.preferences.views.PrefsWidgetFragment"
            android:icon="@drawable/ic_widgets"
            android:layout="@layout/home_preference"
            android:summary="@string/summary__general_smartspace"
            android:title="@string/title__general_smartspace" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category__inputs"
        app:allowDividerAbove="false">
        <Preference
            android:fragment="com.saggitt.omega.preferences.views.PrefsSearchFragment"
            android:icon="@drawable/ic_search_colored"
            android:layout="@layout/home_preference"
            android:summary="@string/summary__general_search"
            android:title="@string/title__general_search" />

        <Preference
            android:fragment="com.saggitt.omega.preferences.views.PrefsGesturesFragment"
            android:icon="@drawable/ic_gesture"
            android:layout="@layout/home_preference"
            android:summary="@string/summary__general_notifications"
            android:title="@string/title__general_notifications" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category__others"
        app:allowDividerAbove="false">
        <Preference
            android:fragment="com.saggitt.omega.preferences.views.PrefsAdvancedFragment"
            android:key="pref_show_smartspace"
            android:icon="@drawable/ic_more_horiz"
            android:layout="@layout/home_preference"
            android:summary="@string/summary__general_advanced"
            android:title="@string/title__general_advanced" />

        <Preference
            android:fragment="com.saggitt.omega.preferences.views.PrefsDevFragment"
            android:icon="@drawable/ic_code"
            android:key="pref_showDevOptions"
            android:layout="@layout/home_preference"
            android:title="@string/developer_options_title" />

        <Preference
            android:fragment="com.saggitt.omega.compose.screens.AboutFragment"
            android:icon="@drawable/ic_info"
            android:key="pref_about"
            android:layout="@layout/home_preference"
            android:summary="@string/summary__general_about"
            android:title="@string/title__general_about" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>