<?xml version="1.0" encoding="utf-8"?><!--
  ~  This file is part of Omega Launcher
  ~  Copyright (c) 2021   Omega Launcher Team
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as
  ~  published by the Free Software Foundation, either version 3 of the
  ~  License, or (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="Drawer">

    <PreferenceCategory android:title="@string/cat_drawer_icons">
        <com.saggitt.omega.preferences.custom.SeekbarPreference
            android:key="pref_allapps_icon_scale"
            android:persistent="true"
            android:title="@string/title__drawer_icon_size"
            app:defaultSeekbarValue="1.0"
            app:maxValue="2.0"
            app:minValue="0.5"
            app:steps="150"
            app:summaryFormat="%.0f%%"
            app:summaryMultiplier="100" />

        <SwitchPreference
            android:defaultValue="false"
            android:disableDependentsState="true"
            android:key="pref_hide_allapps_app_label"
            android:persistent="true"
            android:title="@string/title__drawer_hide_icon_labels"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="pref_hide_allapps_app_label"
            android:key="pref_apps_icon_labels_two_lines"
            android:persistent="true"
            android:title="@string/title__multiline_labels"
            app:iconSpaceReserved="false" />

        <com.saggitt.omega.preferences.custom.SeekbarPreference
            android:dependency="pref_hide_allapps_app_label"
            android:key="pref_allapps_icon_text_scale"
            android:title="@string/title_desktop_text_size"
            app:defaultSeekbarValue="1.0"
            app:maxValue="1.8"
            app:minValue="0.3"
            app:steps="150"
            app:summaryFormat="%.0f%%"
            app:summaryMultiplier="100" />

        <com.saggitt.omega.preferences.custom.CustomDialogPreference
            android:key="pref_icon_popup_menu"
            android:title="@string/title__drawer_icon_popup_menu"
            app:content="@xml/drawer_icon_popup"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/cat_drawer_grid">
        <com.saggitt.omega.preferences.custom.SortAppsPreference
            android:defaultValue="0"
            android:key="pref_sortMode"
            android:title="@string/title__sort_mode"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <Preference
            android:fragment="com.saggitt.omega.preferences.views.AppCategorizationFragment"
            android:key="pref_categorization"
            android:summary="@string/summary_app_categorize"
            android:title="@string/title_app_categorize"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="pref_suggestions"
            android:persistent="false"
            android:title="@string/title_app_suggestions"
            android:summary="@string/summary_app_suggestions"
            app:iconSpaceReserved="false">
            <intent android:action="android.settings.ACTION_CONTENT_SUGGESTIONS_SETTINGS" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_all_apps_search">

        <SwitchPreference
            android:defaultValue="true"
            android:key="pref_all_apps_search"
            android:title="@string/title_all_apps_search"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="true"
            android:dependency="pref_all_apps_search"
            android:disableDependentsState="true"
            android:key="pref_all_apps_global_search"
            android:summary="@string/summary_all_apps_google_search"
            android:title="@string/title_all_apps_google_search"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category__others">
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_protected_apps"
            app:iconSpaceReserved="false"
            app:title="@string/enable_protected_apps" />

        <Preference
            android:key="pref_trust_apps"
            android:summary="@string/summary__drawer_hide_apps"
            android:title="@string/title__drawer_hide_apps"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>