<?xml version="1.0" encoding="utf-8"?><!--
  ~  This file is part of Omega Launcher
  ~  Copyright (c) 2021   Saul Henriquez
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as
  ~  published by the Free Software Foundation, either version 3 of the
  ~  License, or (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        android:key="kill"
        android:summary="@string/summary__dev_restart"
        android:title="@string/title__restart_launcher"
        app:iconSpaceReserved="false" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_showDevOptions"
        android:persistent="true"
        android:title="@string/title__dev_show_Dev"
        app:iconSpaceReserved="false" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_showDebugInfo"
        android:persistent="true"
        android:title="@string/title__dev_show_debug_info"
        app:iconSpaceReserved="false" />

    <PreferenceCategory android:title="@string/pref_category__incubating">

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/entries_layout_mode"
            android:entryValues="@array/values_layout_mode"
            android:key="pref_drawer_layout"
            android:persistent="true"
            android:summary="%s"
            android:title="@string/title_drawer_layout"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="pref_desktop_mode"
            android:summary="@string/pref_desktop_mode_summary"
            android:title="@string/pref_desktop_mode"
            app:iconSpaceReserved="false" />

        <Preference
            android:dependency="pref_desktop_mode"
            android:key="pref_desktop_mode_settings"
            android:title="@string/pref_desktop_mode_settings"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>