<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright (c) 2020 Omega Launcher
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.saggitt.omega.preferences.StyledSwitchPreference
        android:defaultValue="true"
        android:key="pref_settings_search"
        android:icon="@drawable/ic_search_colored"
        android:persistent="true"
        android:summary="@string/summary__advanced_setting_search"
        android:title="@string/title__advanced_setting_search"
        app:iconSpaceReserved="false" />

    <net.gsantner.opoc.preference.LanguagePreferenceCompat
        android:defaultValue=""
        android:icon="@drawable/ic_language"
        android:key="pref_key__language"
        android:summary="@string/summary__advanced_language"
        android:title="@string/title__advanced_language" />

    <Preference
        android:icon="@drawable/ic_import_export"
        android:key="backups"
        android:summary="@string/backup_pref_summary"
        android:title="@string/backups">

        <!--suppress AndroidDomInspection (Injected at compile time) -->
        <intent
            android:targetClass="com.saggitt.omega.backup.BackupListActivity"
            android:targetPackage="@string/application_id" />
    </Preference>
</PreferenceScreen>
