<?xml version="1.0" encoding="utf-8"?><!--
  ~  This file is part of Omega Launcher
  ~  Copyright (c) 2021   Saul Henriquez
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as
  ~  published by the Free Software Foundation, either version 3 of the
  ~  License, or (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        android:defaultValue="false"
        android:disableDependentsState="true"
        android:key="pref_hideHotseat"
        android:title="@string/title__dock_hide"
        app:iconSpaceReserved="false" />

    <SwitchPreference
        android:dependency="pref_hideHotseat"
        android:key="pref_dockBackground"
        android:title="@string/title_dock_fill"
        app:iconSpaceReserved="false" />

    <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
        android:defaultValue="@android:color/white"
        android:dependency="pref_dockBackground"
        android:key="pref_dock_background_color"
        android:title="@string/title_dock_background_color"
        app:cpv_dialogTitle="@string/title_dock_background_color"
        app:cpv_previewSize="large"
        app:cpv_showAlphaSlider="false"
        app:iconSpaceReserved="false" />

    <com.saggitt.omega.preferences.custom.SeekbarPreference
        android:dependency="pref_dockBackground"
        android:key="pref_dockOpacity"
        android:title="@string/title_opacity"
        app:maxValue="1"
        app:minValue="0"
        app:summaryFormat="%.0f%%"
        app:summaryMultiplier="100" />

    <com.saggitt.omega.preferences.custom.SeekbarPreference
        android:key="pref_dockScale"
        android:title="@string/title__dock_scale"
        app:defaultSeekbarValue="1.0"
        app:maxValue="1.75"
        app:minValue="0.70"
        app:summaryFormat="%.0f%%"
        app:summaryMultiplier="100" />

    <com.saggitt.omega.preferences.custom.DockGridPreference
        android:key="pref_dock_grid_size"
        android:title="@string/title__dock_hotseat_icons"
        android:defaultValue="5"
        app:iconSpaceReserved="false" />

    <SwitchPreference
        android:key="pref_dock_search"
        android:title="@string/title_dock_search"
        android:summary="@string/summary_dock_search"
        android:defaultValue="false"
        app:iconSpaceReserved="false" />
</PreferenceScreen>