<?xml version="1.0" encoding="utf-8"?><!--
  ~  This file is part of Omega Launcher
  ~  Copyright (c) 2021   Saul Henriquez
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as
  ~  published by the Free Software Foundation, either version 3 of the
  ~  License, or (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.saggitt.omega.preferences.StyledSwitchPreference
        android:defaultValue="false"
        android:key="pref_hideHotseat"
        android:persistent="true"
        android:title="@string/title__dock_hide"
        android:disableDependentsState="true"
        app:iconSpaceReserved="false" />

    <com.saggitt.omega.preferences.StyledSwitchPreference
        android:key="pref_dockBackground"
        android:title="@string/title_dock_fill"
        android:dependency="pref_hideHotseat"
        android:persistent="true"
        app:iconSpaceReserved="false" />

    <com.saggitt.omega.preferences.ColorPreferenceCompat
        android:key="pref_dock_background_color"
        android:title="@string/title_dock_background_color"
        android:dependency="pref_dockBackground"
        android:defaultValue="@color/transparentish"
        app:cpv_dialogTitle="@string/title_dock_background_color"
        app:cpv_showAlphaSlider="true"
        app:iconSpaceReserved="false" />

    <com.saggitt.omega.preferences.AutoModeSeekbarPreference
        android:key="pref_hotseatCustomOpacity"
        android:title="@string/title_opacity"
        android:dependency="pref_dockBackground"
        app:minValue="0"
        app:maxValue="1"
        app:summaryFormat="%.0f%%"
        app:summaryMultiplier="100"
        android:persistent="true" />

    <com.saggitt.omega.preferences.StyledSwitchPreference
        android:key="pref_dock_search"
        android:title="@string/title__dock_search_bar"
        android:defaultValue="true"
        android:persistent="true"
        app:iconSpaceReserved="false" />

    <com.saggitt.omega.preferences.DockGridSizePreference
        android:key="pref_dock_grid_size"
        android:title="@string/title__dock_hotseat_icons"
        android:persistent="true"
        app:iconSpaceReserved="false" />

    <com.saggitt.omega.preferences.SeekbarPreference
        android:key="hotseatIconSize"
        android:persistent="true"
        android:title="@string/title__dock_icon_size"
        app:defaultSeekbarValue="1.0"
        app:iconSpaceReserved="false"
        app:maxValue="2.0"
        app:minValue="0.5"
        app:steps="150"
        app:summaryFormat="%.0f%%"
        app:summaryMultiplier="100" />

    <com.saggitt.omega.preferences.AutoModeScalePreference
        android:key="pref_dockScale"
        android:persistent="true"
        android:title="@string/title__dock_scale"
        app:defaultSeekbarValue="1.0"
        app:maxValue="1.75"
        app:minValue="0.70"
        app:summaryFormat="%.0f%%"
        app:summaryMultiplier="100" />

    <com.saggitt.omega.preferences.StyledSwitchPreference
        android:key="pref_hotseatShowArrow"
        android:title="@string/title__dock_show_arrow"
        android:defaultValue="false"
        android:persistent="true"
        app:iconSpaceReserved="false" />

    <com.saggitt.omega.preferences.StyledSwitchPreference
        android:key="pref_hotseatShowPageIndicator"
        android:title="@string/hotseat_show_page_indicator"
        android:defaultValue="true"
        android:persistent="true"
        app:iconSpaceReserved="false" />

    <com.saggitt.omega.preferences.StyledSwitchPreference
        android:defaultValue="true"
        android:key="pref_hideDockLabels"
        android:persistent="true"
        android:disableDependentsState="true"
        android:title="@string/title__dock_hide_labels"
        app:iconSpaceReserved="false" />

    <com.saggitt.omega.preferences.StyledSwitchPreference
        android:key="pref_dockIconLabelsInTwoLines"
        android:title="@string/title__multiline_labels"
        android:defaultValue="false"
        android:dependency="pref_hideDockLabels"
        android:persistent="true"
        app:iconSpaceReserved="false" />

    <com.saggitt.omega.preferences.StyledSwitchPreference
        android:key="pref_twoRowDock"
        android:title="@string/title_dock_two_row"
        android:defaultValue="false"
        android:persistent="true" />

</PreferenceScreen>